[gd_scene load_steps=11 format=2]

[ext_resource path="res://Actors/Enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Actors/Enemies/CutoutCharacter.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/HurtBox/HurtBoxArea2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/HitBox/HitBoxArea2D.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/UIHealthBar/UITimedHealthBar.tscn" type="PackedScene" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[sub_resource type="CircleShape2D" id=2]
radius = 10.2498

[sub_resource type="CircleShape2D" id=3]
radius = 32.0

[sub_resource type="Animation" id=4]
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("HurtBoxArea2D/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Enemy" type="PathFollow2D"]
loop = false
script = ExtResource( 1 )
speed = 256.0
max_health = 5

[node name="CutoutCharacter" parent="." instance=ExtResource( 2 )]

[node name="HurtBoxArea2D" parent="." instance=ExtResource( 3 )]
team = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxArea2D"]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="HitBoxArea2D" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, 24 )
team = 1
damage = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxArea2D"]
position = Vector2( 0, -24 )
shape = SubResource( 2 )

[node name="VisibleArea2D" type="Area2D" parent="."]
position = Vector2( 0, 24 )
monitoring = false
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisibleArea2D"]
position = Vector2( 0, -28 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "spawn"
anims/disappear = SubResource( 4 )
anims/spawn = SubResource( 5 )

[node name="UIPivot" type="Node2D" parent="."]
z_index = 2

[node name="HealthBar" parent="UIPivot" instance=ExtResource( 7 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -72.0
margin_right = 80.0
margin_bottom = -52.0
step = 1.0

[node name="UIRemoteTransform2D" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../UIPivot")
update_rotation = false
update_scale = false
[connection signal="hit_landed" from="HurtBoxArea2D" to="." method="_on_HurtBoxArea2D_hit_landed"]
